force-app/main/default/objects/Indicator__mdt/Indicator__mdt.object-meta.xml
<CustomObject>
    <description>Individual indicators in the Weather Vane indicator strip.</description>
    <label>Indicator</label>
    <pluralLabel>Indicators</pluralLabel>
</CustomObject>