force-app/main/default/objects/Indicator__mdt/fields/Contains_Value__c.field-meta.xml
<CustomField>
    <fullName>Contains_Value__c</fullName>
    <inlineHelpText>If indicator type is "Contains", indicator will be enabled if the field specified in Field API Name contains this string. If indicator type is "greater than"/"less than", indicator will be enabled if the field specified is greater than/less than this val.</inlineHelpText>
    <label>Compare Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>