force-app/main/default/objects/Indicator__mdt/fields/Disabled_Color__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Color__c</fullName>
    <defaultValue>"grey"</defaultValue>
    <inlineHelpText>If the indicator criteria are not met, the indicator will be displayed in this color. Usually the HTML color value 'grey' is appropriate. You can also use the special value 'hide' to prevent any display when the criteria are not met.</inlineHelpText>
    <label>Disabled Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>