force-app/main/default/objects/Indicator__mdt/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <inlineHelpText>A short text string (4 chars max) to display on the indicator, OR the name of an SLDS icon from the Standard or Custom sets - see available icons here: https://www.lightningdesignsystem.com/icons/</inlineHelpText>
    <label>Display Value</label>
    <length>35</length>
    <type>Text</type>
</CustomField>