force-app/main/default/objects/Indicator__mdt/fields/Enabled_Color__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Color__c</fullName>
    <inlineHelpText>If the indicator conditions ARE met, the indicator is displayed in this color. Supports HTML color names and hexcodes. If using an SLDS icon, leave blank to use its default color, or enter a color name or hex value to override that color.</inlineHelpText>
    <label>Enabled Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>