force-app/main/default/objects/Indicator__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>