force-app/main/default/objects/Indicator__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <inlineHelpText>API Name of the field which drives this indicator.</inlineHelpText>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>