force-app/main/default/objects/Indicator__mdt/fields/Grid_Order__c.field-meta.xml
<CustomField>
    <fullName>Grid_Order__c</fullName>
    <inlineHelpText>Order of this indicator in the indicator grid.</inlineHelpText>
    <label>Grid Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>