force-app/main/default/objects/Indicator__mdt/fields/Hover_Text__c.field-meta.xml
<CustomField>
    <fullName>Hover_Text__c</fullName>
    <inlineHelpText>Hover text that will appear on the Indicator badge.</inlineHelpText>
    <label>Hover Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>