force-app/main/default/objects/Indicator__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Select the type of indicator grid entry this should be. Contains uses the Contains Value field to check if the string is present. Boolean checks to see if the field is true or false. Blank adds a blank space in the grid, useful for separating indicators.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contains</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Is Not Null</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>